--- a/.github/workflows/infracost.yml
+++ b/.github/workflows/infracost.yml
@@ -15,7 +15,7 @@ jobs:
       uses: infracost/infracost-gh-action@master # Use a specific version instead of master if locking is preferred
       env:
         INFRACOST_API_KEY: ${{ secrets.INFRACOST_API_KEY }}
-        GITHUB_TOKEN: ${{ secrets.MY_GITHUB_TOKEN }} # Do not change
+        MY_GITHUB_TOKEN: ${{ secrets.MY_GITHUB_TOKEN }} # Do not change
         # See the cloud credentials section for the options
       with:
         path: path/to/code
