--- a/.github/workflows/infracost.yml
+++ b/.github/workflows/infracost.yml
@@ -1,3 +1,5 @@
+
+   
 on:
   pull_request:
     paths:
@@ -12,11 +14,10 @@ jobs:
     - name: Check out repository
       uses: actions/checkout@v2
     - name: Run infracost diff
-      uses: infracost/infracost-gh-action@master # Use a specific version instead of master if locking is preferred
+      uses: infracost/infracost-gh-action@master
       env:
         INFRACOST_API_KEY: ${{ secrets.INFRACOST_API_KEY }}
-        MY_GITHUB_TOKEN: ${{ secrets.MY_GITHUB_TOKEN }} # Do not change
-        # See the cloud credentials section for the options
+        GITHUB_TOKEN: ${{ secrets.MY_GITHUB_TOKEN }}
       with:
-        path: path/to/code
-        terraform_plan_flags: -var-file=my.tfvars
+        path: principal
+        usage_file: infracost-usage.yml
