--- a/.github/workflows/infracost.yml
+++ b/.github/workflows/infracost.yml
@@ -1,5 +1,3 @@
-
-   
 on:
   pull_request:
     paths:
@@ -12,12 +10,14 @@ jobs:
     name: Show infracost diff
     steps:
     - name: Check out repository
-      uses: actions/checkout@v2
+      uses: actions/checkout@v2      
     - name: Run infracost diff
       uses: infracost/infracost-gh-action@master
       env:
         INFRACOST_API_KEY: ${{ secrets.INFRACOST_API_KEY }}
         GITHUB_TOKEN: ${{ secrets.MY_GITHUB_TOKEN }}
+        AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
+        AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
       with:
         path: principal
         usage_file: infracost-usage.yml
