--- a/.github/workflows/infracost.yml
+++ b/.github/workflows/infracost.yml
@@ -10,14 +10,14 @@ jobs:
     name: Show infracost diff
     steps:
     - name: Check out repository
-      uses: actions/checkout@v2      
-    - name: Run infracost diff
-      uses: infracost/infracost-gh-action@master
+      uses: actions/checkout@v2
+    - name: Infracost
+      uses: infracost/infracost-gh-action@v0.7.0
       env:
         INFRACOST_API_KEY: ${{ secrets.INFRACOST_API_KEY }}
         GITHUB_TOKEN: ${{ secrets.MY_GITHUB_TOKEN }}
         AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
         AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
       with:
-        path: principal
+        path: terraform
         usage_file: infracost-usage.yml
