--- a/.github/workflows/infracost.yml
+++ b/.github/workflows/infracost.yml
@@ -9,8 +9,9 @@ jobs:
     runs-on: ubuntu-latest
     name: Show infracost diff
     steps:
+    - name: Infracost
     - name: Check out repository
-      uses: actions/checkout@v2
+      uses: actions/checkout@v2      
     - name: Infracost
       uses: infracost/infracost-gh-action@v0.7.0
       env:
