--- a/.github/workflows/infracost.yml
+++ b/.github/workflows/infracost.yml
@@ -12,7 +12,7 @@ jobs:
     - name: Check out repository
       uses: actions/checkout@v2
     - name: Run infracost diff
-      uses: infracost/infracost-gh-action@v0.7.0
+      uses: infracost/infracost-gh-action@master
       env:
         INFRACOST_API_KEY: ${{ secrets.INFRACOST_API_KEY }}
         GITHUB_TOKEN: ${{ secrets.MY_GITHUB_TOKEN }}
