--- a/.github/workflows/infracost.yml
+++ b/.github/workflows/infracost.yml
@@ -11,6 +11,14 @@ jobs:
     steps:
     - name: Check out repository
       uses: actions/checkout@v2
+      with:
+        ref: master
+        path: master
+    - name: Checkout pull request branch
+      uses: actions/checkout@v2
+      with:
+        ref: ${{ github.event.pull_request.head.sha }}
+        path: pull_request
     - name: Run infracost diff
       uses: infracost/infracost-gh-action@master
       env:
