--- a/infracost-usage.yml
+++ b/infracost-usage.yml
@@ -46,14 +46,14 @@ resource_usage:
     region: ap-northeast-1                      # Region the data transfer is originating from.
     monthly_intra_region_gb: 1000               # Monthly data transferred between availability zones in the region.
     monthly_outbound_us_east_to_us_east_gb: 0   # Monthly data transferred between US east regions. NOTE: this is only valid if the region is a us-east region.
-    monthly_outbound_other_region_gb: 750       # Monthly data transferred to other AWS regions.
+    #monthly_outbound_other_region_gb: 750       # Monthly data transferred to other AWS regions.
     monthly_outbound_internet_gb: 1000          # Monthly data transferred to the Internet.
 
   aws_docdb_cluster_instance.my_db:
     data_storage_gb: 1000         # Total storage for cluster in GB.
-    monthly_io_request: 100000000 # Monthly number of input/output requests for cluster.
-    backup_storage_gb: 10000      # Amount of backup storage that is in excess of 100% of the storage size for the cluster in GB.
-    monthly_cpu_credit_hours: 100 # Monthly CPU credits used over the instance baseline in vCPU-hours, only applicable for T3 instances. 
+    #monthly_io_request: 100000000 # Monthly number of input/output requests for cluster.
+    #backup_storage_gb: 10000      # Amount of backup storage that is in excess of 100% of the storage size for the cluster in GB.
+    #monthly_cpu_credit_hours: 100 # Monthly CPU credits used over the instance baseline in vCPU-hours, only applicable for T3 instances. 
 
   aws_dx_connection.my_dx_connection:
     monthly_outbound_region_to_dx_location_gb: 100 # Monthly outbound data transferred from AWS region to DX location in GB.
@@ -155,7 +155,7 @@ resource_usage:
       monthly_tier_1_requests: 3000000 # Monthly PUT, COPY, POST, LIST requests (Tier 1).
       monthly_tier_2_requests: 300000 # Monthly GET, SELECT, and all other requests (Tier 2).
       monthly_lifecycle_transition_requests: 300000 # Monthly Lifecycle Transition requests.
-      monthly_retrieval_gb: 30000 # Monthly data retrievals in GB
+      #monthly_retrieval_gb: 30000 # Monthly data retrievals in GB
       monthly_select_data_scanned_gb: 30000 # Monthly data scanned by S3 Select in GB.
       monthly_select_data_returned_gb: 3000 # Monthly data returned by S3 Select in GB.
     one_zone_infrequent_access: # Usages of S3 One Zone - Infrequent Access:
@@ -163,7 +163,7 @@ resource_usage:
       monthly_tier_1_requests: 4000000 # Monthly PUT, COPY, POST, LIST requests (Tier 1).
       monthly_tier_2_requests: 400000 # Monthly GET, SELECT, and all other requests (Tier 2).
       monthly_lifecycle_transition_requests: 400000 # Monthly Lifecycle Transition requests.
-      monthly_retrieval_gb: 40000 # Monthly data retrievals in GB
+      #monthly_retrieval_gb: 40000 # Monthly data retrievals in GB
       monthly_select_data_scanned_gb: 40000 # Monthly data scanned by S3 Select in GB.
       monthly_select_data_returned_gb: 4000 # Monthly data returned by S3 Select in GB.
     glacier: # Usages of S3 Glacier:
