--- a/.github/workflows/infracost.yml
+++ b/.github/workflows/infracost.yml
@@ -5,7 +5,7 @@ jobs:
   infracost:
     runs-on: ubuntu-latest # The following are JavaScript actions (not Docker)
     env:
-      working-directory: /principal/ # Update this!
+      working-directory: principal # Update this!
 
     name: Run Infracost
     steps:
@@ -65,4 +65,4 @@ jobs:
                                    --repo $GITHUB_REPOSITORY \
                                    --github-token ${{github.token}} \
                                    --pull-request ${{github.event.pull_request.number}} \
-                                   --behavior updat
+                                   --behavior update
