--- a/.github/workflows/infracost.yml
+++ b/.github/workflows/infracost.yml
@@ -1,68 +1,65 @@
-# The GitHub Actions docs (https://docs.github.com/en/actions/reference/workflow-syntax-for-github-actions#on)
-# describe other options for 'on', 'pull_request' is a good default.
+name: Private Terraform module
 on: [pull_request]
+
 jobs:
-  infracost:
-    runs-on: ubuntu-latest # The following are JavaScript actions (not Docker)
+  private-terraform-module:
+    name: Private Terraform module
+    runs-on: ubuntu-latest
     env:
-      working-directory: principal # Update this!
+      TF_ROOT: principal
 
-    name: Run Infracost
     steps:
-      - name: Check out repository
-        uses: actions/checkout@v2
-
-      # Typically the Infracost actions will be used in conjunction with
-      # https://github.com/hashicorp/setup-terraform. Subsequent steps
-      # can run Terraform commands as they would in the shell.
-      - name: Install terraform
-        uses: hashicorp/setup-terraform@v1
-        with:
-          terraform_wrapper: false # This is recommended so the `terraform show` command outputs valid JSON
-
-      # IMPORTANT: add any required steps here to setup cloud credentials so Terraform can run
-
-      - name: Terraform init
-        run: terraform init
-        working-directory: ${{ env.working-directory }}
-
-      - name: Terraform plan
-        run: terraform plan -out tfplan.binary
-        working-directory: ${{ env.working-directory }}
-
-      - name: Terraform show
-        run: terraform show -json tfplan.binary > plan.json
-        working-directory: ${{ env.working-directory }}
-
-      # Install the Infracost CLI, see https://github.com/infracost/actions/tree/master/setup
-      # for other inputs such as version, and pricing-api-endpoint (for self-hosted users).
       - name: Setup Infracost
-        uses: infracost/actions/setup@v1
+        uses: infracost/actions/setup@v2
+        # See https://github.com/infracost/actions/tree/master/setup for other inputs
+        # If you can't use this action, see Docker images in https://infracost.io/cicd
         with:
           api-key: ${{ secrets.INFRACOST_API_KEY }}
 
-      # Generate Infracost JSON output, the following docs might be useful:
-      # Multi-project/workspaces: https://www.infracost.io/docs/features/config_file
-      # Combine Infracost JSON files: https://www.infracost.io/docs/features/cli_commands/#combined-output-formats
-      - name: Generate Infracost JSON
-        run: infracost breakdown --path plan.json --format json --out-file /tmp/infracost.json
-        working-directory: ${{ env.working-directory }}
-        # Env vars can be set using the usual GitHub Actions syntax
-        # See the list of supported Infracost env vars here: https://www.infracost.io/docs/integrations/environment_variables/
-        # env:
-        #   MY_ENV: ${{ secrets.MY_ENV }}
+      # Checkout the base branch of the pull request (e.g. main/master).
+      - name: Checkout base branch
+        uses: actions/checkout@v2
+        with:
+          ref: '${{ github.event.pull_request.base.ref }}'
 
+      # Add your git SSH key so Infracost can checkout the private modules
+      - name: add GIT_SSH_KEY
+        run: |
+          mkdir -p ~/.ssh
+          echo "${{ secrets.GIT_SSH_KEY }}" > ~/.ssh/git_ssh_key
+          chmod 400 ~/.ssh/git_ssh_key
+          echo "GIT_SSH_COMMAND=ssh -i ~/.ssh/git_ssh_key -o 'StrictHostKeyChecking=no'" >> $GITHUB_ENV
+
+      # Generate Infracost JSON file as the baseline.
+      - name: Generate Infracost cost estimate baseline
+        run: |
+          infracost breakdown --path=${TF_ROOT} \
+                              --format=json \
+                              --out-file=/tmp/infracost-base.json
+
+      # Checkout the current PR branch so we can create a diff.
+      - name: Checkout PR branch
+        uses: actions/checkout@v2
+
+      # Generate an Infracost diff and save it to a JSON file.
+      - name: Generate Infracost diff
+        run: |
+          infracost diff --path=${TF_ROOT} \
+                              --format=json \
+                              --compare-to=/tmp/infracost-base.json \
+                              --out-file=/tmp/infracost.json
+
+      # Posts a comment to the PR using the 'update' behavior.
+      # This creates a single comment and updates it. The "quietest" option.
+      # The other valid behaviors are:
+      #   delete-and-new - Delete previous comments and create a new one.
+      #   hide-and-new - Minimize previous comments and create a new one.
+      #   new - Create a new cost estimate comment on every push.
       # See https://www.infracost.io/docs/features/cli_commands/#comment-on-pull-requests for other options.
       - name: Post Infracost comment
         run: |
-          # Posts a comment to the PR using the 'update' behavior.
-          # This creates a single comment and updates it. The "quietest" option.
-          # The other valid behaviors are:
-          #   delete-and-new - Delete previous comments and create a new one.
-          #   hide-and-new - Minimize previous comments and create a new one.
-          #   new - Create a new cost estimate comment on every push.
-          infracost comment github --path /tmp/infracost.json \
-                                   --repo $GITHUB_REPOSITORY \
-                                   --github-token ${{github.token}} \
-                                   --pull-request ${{github.event.pull_request.number}} \
-                                   --behavior update
+          infracost comment github --path=/tmp/infracost.json \
+                                   --repo=$GITHUB_REPOSITORY \
+                                   --github-token=${{github.token}} \
+                                   --pull-request=${{github.event.pull_request.number}} \
+                                   --behavior=update
