:rocket: yaml update!

--- a/.github/workflows/infracost.yml
+++ b/.github/workflows/infracost.yml
@@ -6,7 +6,7 @@ jobs:
     name: Private Terraform module
     runs-on: ubuntu-latest
     env:
-      TF_ROOT: principal
+      TF_ROOT: principal/main.tf
 
     steps:
       - name: Setup Infracost
