--- a/.github/workflows/infracost.yml
+++ b/.github/workflows/infracost.yml
@@ -11,8 +11,10 @@ jobs:
     steps:
     - name: Check out repository
       uses: actions/checkout@v2
+
+
     - name: Run infracost diff
-      uses: infracost/infracost-gh-action@master
+      uses: infracost/actions@v2.0.0
       env:
         INFRACOST_API_KEY: ${{ secrets.INFRACOST_API_KEY }}
         GITHUB_TOKEN: ${{ secrets.MY_GITHUB_TOKEN }}
