--- a/.github/workflows/infracost.yml
+++ b/.github/workflows/infracost.yml
@@ -11,10 +11,8 @@ jobs:
     steps:
     - name: Check out repository
       uses: actions/checkout@v2
-
-
     - name: Run infracost diff
-      uses: infracost/actions@v2.0.0
+      uses: infracost/infracost-gh-action@master
       env:
         INFRACOST_API_KEY: ${{ secrets.INFRACOST_API_KEY }}
         GITHUB_TOKEN: ${{ secrets.MY_GITHUB_TOKEN }}
