--- a/.github/workflows/infracost.yml
+++ b/.github/workflows/infracost.yml
@@ -1,22 +1,50 @@
-on:
-  pull_request:
-    paths:
-    - '**.tf'
-    - '**.tfvars'
-    - '**.tfvars.json'
-jobs:
-  infracost:
-    runs-on: ubuntu-latest
-    name: Show infracost diff
-    steps:
-    - name: Check out repository
-      uses: actions/checkout@v2
-    - name: Run infracost diff
-      uses: infracost/infracost-gh-action@master
-      env:
-        INFRACOST_API_KEY: ${{ secrets.INFRACOST_API_KEY }}
-        GITHUB_TOKEN: ${{ secrets.MY_GITHUB_TOKEN }}
-        GOOGLE_CREDENTIALS: ${{ secrets.GOOGLE_CREDENTIALS }}
-      with:
-        path: principal
-        usage_file: infracost-usage.yml
+   on: [pull_request]
+   jobs:
+     paths:
+     - '**.tf'
+     - '**.tfvars'
+     - '**.tfvars.json'
+     infracost:
+       name: Infracost
+       runs-on: ubuntu-latest
+
+       env:
+         TF_ROOT: principal/infracost-usage.yml
+         INFRACOST_API_KEY: ${{ secrets.INFRACOST_API_KEY }}
+         GITHUB_TOKEN: ${{ secrets.MY_GITHUB_TOKEN }}
+         GOOGLE_CREDENTIALS: ${{ secrets.GOOGLE_CREDENTIALS }}
+
+         steps:
+           - name: Setup Infracost
+             uses: infracost/actions/setup@v2
+             with:
+               api-key: ${{ secrets.INFRACOST_API_KEY }}
+
+           - name: Checkout base branch
+             uses: actions/checkout@v2
+             with:
+               ref: '${{ github.event.pull_request.base.ref }}'
+
+           - name: Generate Infracost cost estimate baseline
+             run: |
+               infracost breakdown --path=${TF_ROOT} \
+                                   --format=json \
+                                   --out-file=/tmp/infracost-base.json
+
+           - name: Checkout PR branch
+             uses: actions/checkout@v2
+
+           - name: Generate Infracost diff
+             run: |
+               infracost diff --path=${TF_ROOT} \
+                              --format=json \
+                              --compare-to=/tmp/infracost-base.json \
+                              --out-file=/tmp/infracost.json
+
+           - name: Post Infracost comment
+             run: |
+                 infracost comment github --path=/tmp/infracost.json \
+                                          --repo=$GITHUB_REPOSITORY \
+                                          --github-token=${{github.token}} \
+                                          --pull-request=${{github.event.pull_request.number}} \
+                                          --behavior=update
