--- a/.github/workflows/infracost.yml
+++ b/.github/workflows/infracost.yml
@@ -1,46 +1,52 @@
-   on: [pull_request]
-   jobs:
-     infracost:
-       name: Infracost
-       runs-on: ubuntu-latest
+on:
+  pull_request:
+    paths:
+    - '**.tf'
+    - '**.tfvars'
+    - '**.tfvars.json'
 
-       env:
-         TF_ROOT: principal/infracost-usage.yml
-         INFRACOST_API_KEY: ${{ secrets.INFRACOST_API_KEY }}
-         GITHUB_TOKEN: ${{ secrets.MY_GITHUB_TOKEN }}
-         GOOGLE_CREDENTIALS: ${{ secrets.GOOGLE_CREDENTIALS }}
+jobs:
+  infracost:
+    runs-on: ubuntu-latest
+    name: Show infracost diff
+    env:
+      TF_ROOT: principal/infracost-usage.yml
+      INFRACOST_API_KEY: ${{ secrets.INFRACOST_API_KEY }}
+      GITHUB_TOKEN: ${{ secrets.MY_GITHUB_TOKEN }}
+      GOOGLE_CREDENTIALS: ${{ secrets.GOOGLE_CREDENTIALS }}
 
-         steps:
-           - name: Setup Infracost
-             uses: infracost/actions/setup@v2
-             with:
-               api-key: ${{ secrets.INFRACOST_API_KEY }}
+    steps:
+    - name: Setup Infracost
+      uses: infracost/actions/setup@v2
+      with:
+        api-key: ${{ secrets.INFRACOST_API_KEY }}
 
-           - name: Checkout base branch
-             uses: actions/checkout@v2
-             with:
-               ref: '${{ github.event.pull_request.base.ref }}'
+    - name: Checkout base branch
+      uses: actions/checkout@v2  
+      with:
+        ref: '${{ github.event.pull_request.base.ref }}'
+      
+    - name: Generate Infracost cost estimate baseline
+      run: |
+        infracost breakdown --path=${TF_ROOT} \
+                            --format=json \
+                            --out-file=/tmp/infracost-base.json
 
-           - name: Generate Infracost cost estimate baseline
-             run: |
-               infracost breakdown --path=${TF_ROOT} \
-                                   --format=json \
-                                   --out-file=/tmp/infracost-base.json
+    - name: Checkout PR branch
+      uses: actions/checkout@v2
 
-           - name: Checkout PR branch
-             uses: actions/checkout@v2
+    - name: Generate Infracost diff
+      run: |
+        infracost diff --path=${TF_ROOT} \
+                      --format=json \
+                      --compare-to=/tmp/infracost-base.json \
+                      --out-file=/tmp/infracost.json
 
-           - name: Generate Infracost diff
-             run: |
-               infracost diff --path=${TF_ROOT} \
-                              --format=json \
-                              --compare-to=/tmp/infracost-base.json \
-                              --out-file=/tmp/infracost.json
+    - name: Post Infracost comment
+      run: |
+          infracost comment github --path=/tmp/infracost.json \
+                                  --repo=$GITHUB_REPOSITORY \
+                                  --github-token=${{github.token}} \
+                                  --pull-request=${{github.event.pull_request.number}} \
+                                  --behavior=update
 
-           - name: Post Infracost comment
-             run: |
-                 infracost comment github --path=/tmp/infracost.json \
-                                          --repo=$GITHUB_REPOSITORY \
-                                          --github-token=${{github.token}} \
-                                          --pull-request=${{github.event.pull_request.number}} \
-                                          --behavior=update
