--- a/.github/workflows/infracost.yml
+++ b/.github/workflows/infracost.yml
@@ -10,7 +10,7 @@ jobs:
     runs-on: ubuntu-latest
     name: Show infracost diff
     env:
-      TF_ROOT: principal/infracost-usage.yml
+      TF_ROOT: principal
       INFRACOST_API_KEY: ${{ secrets.INFRACOST_API_KEY }}
       GITHUB_TOKEN: ${{ secrets.MY_GITHUB_TOKEN }}
       GOOGLE_CREDENTIALS: ${{ secrets.GOOGLE_CREDENTIALS }}
